k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway

---
apiVersion: v1
kind: Namespace
metadata:
  name: database
